--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>Spring Boot Refresh Token with JWT</description>
     <properties>
         <java.version>11</java.version>
+        <jwt.version>0.9.1</jwt.version>
     </properties>
     <dependencies>
 
@@ -59,6 +60,17 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>${jwt.version}</version>
         </dependency>
 
     </dependencies>
