--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port= 1221
 
 # MYSQL
-spring.datasource.url=jdbc:mysql://localhost:3306/photo_app?serverTimezone=UTC
-spring.datasource.username=noyan
-spring.datasource.password=111111
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/photo_app?serverTimezone=UTC
+#spring.datasource.username=noyan
+#spring.datasource.password=111111
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.show-sql=true
 
 # JWT
 jwt.secret= mySecretKey
