Task 30 : Permit Swagger endpoint in WebSecurityConfig and Fix a code in SignupRequest

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port= 1221
 spring.datasource.url=jdbc:mysql://localhost:3306/photo_app?serverTimezone=UTC
 spring.datasource.username=noyan
 spring.datasource.password=111111
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 
